fix: fixed up the preference dropdown with animation + cuisine dropdown box formatted for readability

--- a/frontend/src/css/dropdown.css
+++ b/frontend/src/css/dropdown.css
@@ -4,7 +4,7 @@
     height:0px;
     overflow: hidden;
     text-align: center;
-    transition: height .4s ease;
+    transition: height 0.25s ease;
   }
   
   .slide li {padding : 30px;}
@@ -33,9 +33,9 @@
     border: 1px solid #ccc;
   }
   
-  #touch {position: absolute; opacity: 0; height: 0px; }    
+  #touch {position: absolute; height: 0px; }    
   
-  #touch:checked + .slide {height: 300px;} 
+  #touch:checked + .slide {height: 200px;} 
 
   .dropdown {
     position: relative;
@@ -44,11 +44,21 @@
   
   .dropdown-content {
     display: none;
-    position: absolute;
+    position: fixed;
     background-color: #f9f9f9;
-    min-width: 2cm;
+    min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
+    text-align: left;
+    padding-left: 5px;
+    max-height: 200px;
+    overflow: scroll;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+  
+  .dropdown-content::-webkit-scrollbar {
+    display: none;
   }
   
   .dropdown-content label {
@@ -58,8 +68,4 @@
   
   .dropdown:hover .dropdown-content {
     display: block;
-  }
-
-  .dropdown_left {
-    text-align: left !important;
-  }
+  };
